# code-reviewer-monorepo

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  deps.py  main.py
backend/app/llm/: __init__.py  base.py  factory.py  models.py  openai_provider.py
backend/app/models/: __init__.py  repository.py  review.py
backend/app/routers/: repos.py  reviews.py  webhooks.py
backend/app/schemas/: review.py
backend/app/services/: config_service.py  diff_service.py  review_service.py
backend/app/vcs/: __init__.py  base.py  factory.py  models.py
backend/app/vcs/github/: __init__.py  client.py  provider.py  webhook.py
backend/app/vcs/gitlab/: __init__.py  client.py  provider.py  webhook.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: test_config_service.py  test_diff_service.py  test_github_webhook.py  test_llm_factory.py
docs/: ARCHITECTURE.md  DECISIONS.md  PRODUCT.md
infra/: .env.example  docker-compose.yml
