[project]
name = "ai-code-reviewer"
version = "0.1.0"
description = "AI-powered code review tool for GitHub and GitLab"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "beanie>=1.25.0",
    "motor>=3.5.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pygithub>=2.3.0",
    "python-gitlab>=4.0.0",
    "openai>=1.40.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
